# edinet_wrap

./: .gitignore  LICENSE  pyproject.toml  readme.md
.github/workflows/: python-publish.yml
edinet/: __init__.py  main.py
edinet/enums/: exceptions.py  response.py
