[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "0.12"
name = "edinet-wrap"
dependencies = [
    "requests",
]
requires-python = ">= 3.9"
authors = [
    {name = "iodine53"},
]
maintainers = [
    {name = "iodine53"},
]
description = "EDINET API wrapper."
readme = {file = "readme.md", content-type = "text/markdown"}
license = {text = "Apache Software License"}
keywords = ["edinet"]
classifiers = [
    "Development Status :: 4 - Beta",

    "License :: OSI Approved :: Apache Software License",

    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[project.urls]
Repository = "https://github.com/35enidoi/edinet_wrap"
Issues = "https://github.com/35enidoi/edinet_wrap/issues"
